platform/airflow-config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: platform-gateway
      sectionName: https

  hostnames:
    - airflow.hacwa.co.uk

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: airflow-api-server
          port: 8080
          weight: 1
